tests/polykinds/T15804.hs
{-# Language PolyKinds #-}

module T15804 where

data T :: (a :: k) -> *
